--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.52.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
+    "react-spinners": "^0.14.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
